# MAI-all

./: .gitignore
1 semester/: subjects.xlsx
1 semester/CS/10 lab/: a.out  converter.py  main.c  отчет.docx
1 semester/CS/11 lab/: a.out  main.c  task_var_19.c
1 semester/CS/12 lab/: CMakeLists.txt  отчет.docx
1 semester/CS/13 lab/: a.out  main.c
1 semester/CS/14 lab/: CMakeLists.txt  main.c
1 semester/CS/15 lab/: CMakeLists.txt
1 semester/CS/6 lab/: lab6
1 semester/CS/7 lab/: nam.py  rules.txt
1 semester/CS/8 lab/: log.docx  отчет.docx
1 semester/CS/kursovaya1/: kursovaya1.docx
1 semester/CS/kursovaya3/: CMakeLists.txt  main.c
1 semester/CS/kursovaya4/: CMakeLists.txt  main.c
1 semester/CS/ref/: Видеокарта(от реферата).docx
1 semester/computing systems/: Kursovaya1.docx  Kursovaya2.docx  Видеокарта(от реферата) — копия.docx  Видеокарта(от реферата).docx  Реферат.docx
1 semester/computing systems/10 lab/: CMakeLists.txt  (+1 more)
1 semester/math anal/: Ответы на вопросы за первый семестр.docx
2 semester/: subjects.xlsx  timetable.xlsx
2 semester/CS/lab 23/: CMakeLists.txt  main.c  old_tree  rbtree.c  rbtree.h  отчет.docx
2 semester/CS/lab 23/array/: array.c  array.h
2 semester/CS/lab 23/exception/: exception.c  exception.h
2 semester/CS/lab 23/queue/: queue.h
2 semester/CS/lab 23/rbtree/: rbtree.c
2 semester/CS/lab 23/stack/: stack.h
2 semester/DM/kp/kp8/: CMakeLists.txt  core.hpp  debug.hpp  main.cpp  res.txt  thread_pool.hpp
2 semester/DM/kp/kp8/data/: alpha.py  graph.txt  graph1_branch_10_node.txt  graph1_branch_8_node.txt
(+87 files in other folders)
